# shoulda

./: Cargo.toml  README.md
.github/workflows/: test.yml
assertable/: Cargo.toml
assertable/src/: lib.rs
assertable_core/: Cargo.toml
assertable_core/src/: array_like.rs  empty_types.rs  lib.rs  tests.rs  wrapper_types.rs
assertable_core/src/contains/: mod.rs
assertable_core/src/specific_assert/: assert_err.rs  assert_false.rs  assert_some.rs  assert_true.rs
assertable_macro/: Cargo.toml
assertable_macro/src/: lib.rs
shoulda/: Cargo.toml
shoulda_core/: Cargo.toml
shoulda_core/src/: array_like.rs  assertion_hook.rs  empty_types.rs  epsilon_provider.rs  float_diff_provider.rs  lib.rs  should_result.rs  shoulda_equal.rs  shoulda_of_type.rs  tests.rs  tuples.rs  wrapper_types.rs
shoulda_core/src/contains/: mod.rs
shoulda_core/src/specific_assert/: assert_none.rs  assert_ok.rs  mod.rs
shoulda_core/src/specifics/: any.rs  bool.rs  command.rs  iter.rs  mod.rs  option.rs  panic.rs  result.rs
shoulda_macro/: Cargo.toml
shoulda_macro/src/: fmt.rs  lib.rs
src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
