[package]
name = "shoulda"
version = "0.1.10"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"
license = "MIT"
description = "derive macro for test assertions"
homepage = "https://github.com/cramt/shoulda"
repository = "https://github.com/cramt/shoulda"
documentation = "https://docs.rs/shoulda_core/0.1.2/shoulda_core/index.html"
keywords = ["test", "BDD", "TDD", "assertion"]

[features]
default = ["fmt"]
fmt = ["shoulda_macro/fmt"]

[dependencies]
shoulda_macro = { path = "./shoulda_macro", version = "0.1.9" }
shoulda_core = { path = "./shoulda_core", version = "0.1.9" }

[workspace]
members = ["shoulda_core", "shoulda_macro", "tests"]

[package.metadata.docs.rs]
no-default-features = true
