[package]
name = "assertable"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"
license = "MIT"
description = "derive macro for test assertions"
homepage = "https://github.com/cramt/assertable"
repository = "https://github.com/cramt/assertable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assertable_macro = {path = "../assertable_macro"}
assertable_core= {path = "../assertable_core"}
