[package]
name = "shoulda_core"
version = "0.1.6"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"
license = "MIT"
description = "derive macro for test assertions"
homepage = "https://github.com/cramt/shoulda"
repository = "https://github.com/cramt/shoulda"
documentation = "https://docs.rs/shoulda_core/0.1.2/shoulda_core/index.html"
keywords = ["test", "BDD", "TDD", "assertion"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.7.2"
