[package]
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
description = "derive macro for test assertions"
documentation = "https://docs.rs/shoulda_core/0.1.2/shoulda_core/index.html"
edition = "2018"
homepage = "https://github.com/cramt/shoulda"
keywords = ["test", "BDD", "TDD", "assertion"]
license = "MIT"
name = "shoulda_core"
repository = "https://github.com/cramt/shoulda"
version = "0.1.13"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_env = "0.1.2"
impl-trait-for-tuples = "0.2.1"
once_cell = "1.7.2"
