[package]
edition = "2018"
homepage = "https://github.com/cramt/shoulda"
keywords = ["test", "BDD", "TDD", "assertion"]
license = "MIT"
name = "shoulda_macro"
repository = "https://github.com/cramt/shoulda"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true


[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
